--- a/lda.Rmd
+++ b/lda.Rmd
@@ -47,7 +47,7 @@ We look for the posterior parameters $\vec{\theta_1}, \vec{\theta_2}, ... \vec{\
 In other words. We are going to compute the relevance of topics per document. And the relevance of word per topic.
 
 Jon distribution
-$$ P \propto \prod_{m=1}^M{P(\vec{\theta_m}|\vec{\alpha})}\prod_{k=1}^K{P(\vec{\phi_k|\vec{\beta}}})\prod_{n=1}^{N_m}{P(z_{m,n}| \vec{\theta})P(w_{m,n}|z_{m,n},\vec{\phi_{1:k})}} $$
+$$ P \propto \prod_{m=1}^M{P(\vec{\theta_m}|\vec{\alpha})}\prod_{k=1}^K{P(\vec{\phi_k}|\vec{\beta}})\prod_{n=1}^{N_m}{P(z_{m,n}| \vec{\theta})P(w_{m,n}|z_{m,n},\vec{\phi_{1:k})}} $$
 
 Thanks to google we discovered more or less the marginal distributions. We can do gibbs sampling.
 $$ p(z_{m,n}=k|z_{-m,n}, \{w\}, \vec{\alpha}, \vec{\beta}) = \frac{t_{m,k} + \alpha_k}{\sum_{i=1}^{K}{t_{m,i}} + \alpha_i} \frac{c_{k, w_{m,n}} + \beta_{w_{m,n}}
@@ -401,7 +401,7 @@ for (k in 1:topics){
 Finally, lets see whether LDA was able to capture hate, love and sadness. 
 In order to see this, we are going to check the 10 most important words per topic.
 
-```{r fig.show="hold", out.width="33%"}
+```{r fig.show="hold", out.width="100%"}
 top <- 10
 words_idx <- NULL
 words_prob <- NULL
